gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23607.d
version https://git-lfs.github.com/spec/v1
oid sha256:470d28ef937eaf4d1ba59d23ae7de8a197d577cb7b66af481093b97349b099f9
size 348
